Made builtin templates pluggable via `TemplateBundle` that are loaded via SPI instead of `BuiltinTemplatePlugin` plugin extension.